--- a/index.html
+++ b/index.html
@@ -135,36 +135,6 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
 
-    <!-- 
-        Chosen Color Palette: Energetic & Playful
-        HEX Codes: #FF6B6B (Coral Red), #FFD166 (Sunny Yellow), #06D6A0 (Mint Green), #118AB2 (Cerulean Blue), #073B4C (Dark Slate Blue/Navy)
-
-        Infographic Narrative & Structure Plan (based on BASE Store Report):
-        1. Hero Section
-        2. Current Challenges
-        3. Key Point: Customer Experience Gap
-           - Existing Gemini API Feature: Product FAQ Generator
-        4. Clarifying Target Customer Profiles (New Section)
-           - Added Gemini API Feature: Target Customer Persona Generator
-        5. Learning from Competitors
-           - Existing Gemini API Feature: Gift Set Idea Generator
-        6. Top Priority Actions
-           - Enhanced Action 1 (Brand Experience) with Gemini API: "About Us" Content Enhancer
-           - Enhanced Action 4 (Product Page) with Gemini API: Product Description Rewriter
-        7. BASE App Utilization Strategy
-           - Existing Gemini API Feature: BASE App Usage Idea Deep Dive
-           - Added Gemini API Feature: Seasonal Promotion Idea Generator
-        8. Roadmap: Short-Term Intensive Improvements
-        9. Expected Outcomes
-        10. Conclusion
-
-        Visualization Choices (Confirming NO SVG, NO Mermaid JS):
-        - Standard charts: Chart.js (Canvas).
-        - Diagrams/Flows/Cards: HTML/CSS with Tailwind.
-
-        NEITHER Mermaid JS NOR SVG were used anywhere in this document.
-    -->
-
     <header class="hero-bg text-white p-8 text-center shadow-lg">
         <h1 class="text-3xl md:text-4xl font-bold mb-2">南国プリン BASEストア売上向上戦略</h1>
         <p class="text-lg md:text-xl">専門家分析に基づくデータ駆動型インフォグラフィック</p>
@@ -398,7 +368,7 @@
 
     <footer class="text-center p-6 bg-[#073B4C] text-white text-sm">
         <p>&copy; 2025 南国プリン BASEストア戦略インフォグラフィック</p>
-        <p>このインフォグラフィックは「南国プリンBASEストア分析と改善提案」レポートに基づいて作成されました。</p>
+        <p>このインフォグラフィックは「<a href="https://uminoshota.github.io/nangoku.base.bunseki/" target="_blank" rel="noopener noreferrer" class="underline hover:text-yellow-300">南国プリンBASEストア分析と改善提案</a>」レポートに基づいて作成されました。</p>
     </footer>
 
     <script>
